--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,8 @@ dependencies:
   image_picker: ^0.8.3+2
   firebase_storage: ^10.0.2
   uuid: ^3.0.4
+  http: ^0.13.3
+  url_launcher:
 
 
   cupertino_icons: ^1.0.2
