--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,8 @@ dependencies:
   uuid: ^3.0.4
   http: ^0.13.3
   url_launcher:
+  youtube_api: ^1.0.4
+  awesome_dialog: ^2.1.2
 
   # Location picker for flutter
   google_maps: 6.0.0
@@ -36,3 +38,6 @@ flutter:
 
   # the material Icons class.
   uses-material-design: true
+
+  assets:
+    - assets/
